feat(api): added all queries marked for keep and merge, aligned api domains
